--- a/MarketerSysytem.Web/MarketerSysytem.Web.csproj
+++ b/MarketerSysytem.Web/MarketerSysytem.Web.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\MarketerSystem.Service\MarketerSystem.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
