--- a/MarketerSysytem.Web/appsettings.json
+++ b/MarketerSysytem.Web/appsettings.json
@@ -1,5 +1,5 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform
@@ -12,6 +12,10 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
 
     "Scopes": "access_as_user",
     "CallbackPath": "/signin-oidc"
+  },
+  "ConnectionStrings": {
+    //"MarketerDBContext": "data source=(localdb)\\mssqllocaldb;initial catalog=MarketerDB;integrated security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "MarketerDBContext": "data source=ZURASAMKHARADZE\\SQLEXPRESS;initial catalog=MarketerDB;integrated security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
