--- a/MarketerSystem.Data/MarketerSystem.Data.csproj
+++ b/MarketerSystem.Data/MarketerSystem.Data.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\MarketerSystem.Service\MarketerSystem.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
