--- a/MarketerSystem.Domain/MarketerSystem.Domain.csproj
+++ b/MarketerSystem.Domain/MarketerSystem.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MarketerSystem.Common\MarketerSystem.Common.csproj" />
+  </ItemGroup>
+
 </Project>
