--- a/MarketerSysytem.Web/appsettings.json
+++ b/MarketerSysytem.Web/appsettings.json
@@ -14,8 +14,8 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "CallbackPath": "/signin-oidc"
   },
   "ConnectionStrings": {
-    //"MarketerDBContext": "data source=(localdb)\\mssqllocaldb;initial catalog=MarketerDB;integrated security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
-    "MarketerDBContext": "data source=ZURASAMKHARADZE\\SQLEXPRESS;initial catalog=MarketerDB;integrated security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "MarketerDBContext": "data source=(localdb)\\mssqllocaldb;initial catalog=MarketerDB;integrated security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    //"MarketerDBContext": "data source=ZURASAMKHARADZE\\SQLEXPRESS;initial catalog=MarketerDB;integrated security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
