--- a/MarketerSystem.Service/MarketerSystem.Service.csproj
+++ b/MarketerSystem.Service/MarketerSystem.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MarketerSystem.Abstractions\MarketerSystem.Abstractions.csproj" />
     <ProjectReference Include="..\MarketerSystem.Common\MarketerSystem.Common.csproj" />
   </ItemGroup>
